test/fail/too_large_hex.min
program 
    number x := 0x80000000 $$ 2^31
start
end
